Fix recommended videos width on mobile

--- a/app/assets/stylesheets/videos/show.scss
+++ b/app/assets/stylesheets/videos/show.scss
@@ -106,8 +106,6 @@ $show-video-width: 1300px;
   .recommended-videos-section {
     margin: 0;
     width: 100%;
-    max-width: 100%;
     min-width: none;
-    padding: 0;
   }
 }
